--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
   "name": "apirest_with_mongodb",
   "version": "1.0.0",
-  "description": "***",
+  "description": "API RESTful com MongoDB",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./index.js localhost 3000"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wevdiaz/APIRest_with_MongoDB.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Diazz",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/wevdiaz/APIRest_with_MongoDB/issues"
   },
-  "homepage": "https://github.com/wevdiaz/APIRest_with_MongoDB#readme"
+  "homepage": "https://github.com/wevdiaz/APIRest_with_MongoDB#readme",
+  "dependencies": {
+    "express": "^4.18.1",
+    "mongoose": "^6.5.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
+  }
 }
